--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -22,54 +22,69 @@
         <a href="#">Services</a>
         <a href="#">Clients</a>
         <a href="#">Contact</a>
-      </div>
+    </div>
 
-      <main>
+    <main id="main">
         <!-- button to open the sidebar-->
-         <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
-         <div class="container">
-            <main class="container">
-                <div class="kanban-heading">
-                    <strong class="kanban-heading-text">Kanban Board</strong>
-                </div>
-                <div class="kanban-board">
-                    <div class="kanban-block" id="todo" ondrop="drop(event)" ondragover="allowDrop(event)">
-                        <strong>To Do</strong>
-                        <div class="task-button-block">
-                            <button id="task-button">Create new task</span>
-                        </div>
-                        <div class="task" id="task1" draggable="true" ondragstart="drag(event)">
-                            <span>Task 1</span>
-                        </div>
-                        <div class="task" id="task2" draggable="true" ondragstart="drag(event)">
-                            <span>Task 2</span>
-                        </div>
-                        <div class="task" id="task3" draggable="true" ondragstart="drag(event)">
-                            <span>Task 3</span>
-                        </div>
-                        <div class="task" id="task4" draggable="true" ondragstart="drag(event)">
-                            <span>Task 4</span>
-                        </div>
-                        <div class="task" id="task5" draggable="true" ondragstart="drag(event)">
-                            <span>Task 5</span>
-                        </div>
-                        <div class="task" id="task6" draggable="true" ondragstart="drag(event)">
-                            <span>Task 6</span>
-                        </div>
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+        <!-- Kanban board -->
+        <div class="container">
+            <div class="kanban-board">
+                <!-- Backlog-->
+                <div class="kanban-block" id="todo" class="backlog" ondrop="drop(event)" ondragover="allowDrop(event)">
+                    <strong>To Do</strong>
+                    <div class="task-button-block">
+                        <button id="task-button" onclick="createTask()">Create new task</span>
                     </div>
-                    <div class="kanban-block" id="inprogress" ondrop="drop(event)" ondragover="allowDrop(event)">
-                        <strong>In Progress</strong>
+                    <div class="task" id="task1" draggable="true" ondragstart="drag(event)">
+                        <span>Task 1</span>
                     </div>
-                    <div class="kanban-block" id="done" ondrop="drop(event)" ondragover="allowDrop(event)">
-                        <strong>Done</strong>
+                    <div class="task" id="task2" draggable="true" ondragstart="drag(event)">
+                        <span>Task 2</span>
+                    </div>
+                    <div class="task" id="task3" draggable="true" ondragstart="drag(event)">
+                        <span>Task 3</span>
+                    </div>
+                    <div class="task" id="task4" draggable="true" ondragstart="drag(event)">
+                        <span>Task 4</span>
+                    </div>
+                    <div class="task" id="task5" draggable="true" ondragstart="drag(event)">
+                        <span>Task 5</span>
+                    </div>
+                    <div class="task" id="task6" draggable="true" ondragstart="drag(event)">
+                        <span>Task 6</span>
                     </div>
                 </div>
-            </main>
-        </div>
-      </main>
+                <!-- In Progress-->
+                <div class="kanban-block" id="inprogress" class="inProgress" ondrop="drop(event)" ondragover="allowDrop(event)">
+                    <strong>In Progress</strong>
+                </div>
+                <!-- Done-->
+                <div class="kanban-block" id="done" class="done" ondrop="drop(event)" ondragover="allowDrop(event)">
+                    <strong>Done</strong>
+                </div>
+                <div class="create-new-task-block" id="create-new-task-block">
+                    <strong>New Task</strong>
+                    <span class="form-row">
+                        <label class="form-row-label" for="task-name">Task</label>
+                        <input class="form-row-input" type="text" name="task-name" id="task-name">
+                    </span>
+                    <span class="form-row">
+                        <label class="form-row-label" for="task-name">Description</label>
+                        <textarea class="form-row-input" name="task-description" id="task-description" cols="70"
+                            rows="10"></textarea>
+                    </span>
+                    <span class="form-row-buttons">
+                        <button id="edit-button" onclick="editTask()">Edit</span>
+                    <button id="save-button" onclick="saveTask()">Save</span>
+                        <button id="cancel-button" onclick="createTask()">Cancel</span>
+                            </span>
+                </div>
+            </div>
+    </main>
 
     <!-- Kanbanboard-->
-    
+
     <!-- JavaScript Bundle with Popper Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
