--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -17,22 +17,21 @@
 <body>
     <!-- Sidebar navigation-->
     <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <a href="#">Settings</a>
+        <a href="#">Colors</a>
+        <a href="#">Statistics</a>
+        <a href="#">Filter</a>
     </div>
 
     <main id="main">
         <!-- button to open the sidebar-->
-        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+        <span style="font-size:30px;cursor:pointer" onclick="manageSidebar()">&#9776;</span>
         <!-- Kanban board -->
         <div class="container">
             <div class="kanban-board">
                 <!-- Backlog-->
                 <div class="kanban-block" id="todo" class="backlog" ondrop="drop(event)" ondragover="allowDrop(event)">
-                    <strong>To Do</strong>
+                    <strong><h2>To Do</h2></strong>
                     <div class="task-button-block">
                         <button id="task-button" onclick="createTask()">Create new task</span>
                     </div>
@@ -57,11 +56,11 @@
                 </div>
                 <!-- In Progress-->
                 <div class="kanban-block" id="inprogress" class="inProgress" ondrop="drop(event)" ondragover="allowDrop(event)">
-                    <strong>In Progress</strong>
+                    <strong><h2>In Progress</h2></strong>
                 </div>
                 <!-- Done-->
                 <div class="kanban-block" id="done" class="done" ondrop="drop(event)" ondragover="allowDrop(event)">
-                    <strong>Done</strong>
+                    <strong><h2>Done</h2></strong>
                 </div>
                 <div class="create-new-task-block" id="create-new-task-block">
                     <strong>New Task</strong>
@@ -82,8 +81,6 @@
                 </div>
             </div>
     </main>
-
-    <!-- Kanbanboard-->
 
     <!-- JavaScript Bundle with Popper Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
