--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -33,7 +33,7 @@
                 <div class="kanban-block" id="todo" class="backlog" ondrop="drop(event)" ondragover="allowDrop(event)">
                     <strong><h2>To Do</h2></strong>
                     <div class="task-button-block">
-                        <button id="task-button" onclick="createTask()">Create new task</span>
+                        <button id="task-button" onclick="createTask()">&#x2b;</button>
                     </div>
                     <div class="task" id="task1" draggable="true" ondragstart="drag(event)">
                         <span>Task 1</span>
