--- a/login/login.html
+++ b/login/login.html
@@ -4,7 +4,7 @@
     </head>
 
     <body>
-
+        <!-- I hate my life -->
         <form action="./login.php" method="POST">
             <input name="email" id="email" placeholder="email" type="text" required>
             <input name="password" id="password" placeholder="password" type="password" required> 
