--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -31,7 +31,11 @@
             <div class="kanban-board">
                 <!-- Backlog-->
                 <div class="kanban-block" id="todo" class="backlog" ondrop="drop(event)" ondragover="allowDrop(event)">
-                    <strong><h2><div class="backlogTitle">Backlog</div></h2></strong>
+                    <strong>
+                        <h2>
+                            <div class="backlogTitle">Backlog</div>
+                        </h2>
+                    </strong>
                     <div class="task-button-block">
                         <button id="task-button" onclick="createTask()">&#x2b;</button>
                     </div>
@@ -55,18 +59,28 @@
                     </div>
                 </div>
                 <!-- In Progress-->
-                <div class="kanban-block" id="inprogress" class="inProgress" ondrop="drop(event)" ondragover="allowDrop(event)">
-                    <strong><h2><div class="inProgressTitle">In Progress</div></h2></strong>
+                <div class="kanban-block" id="inprogress" class="inProgress" ondrop="drop(event)"
+                    ondragover="allowDrop(event)">
+                    <strong>
+                        <h2>
+                            <div class="inProgressTitle">In Progress</div>
+                        </h2>
+                    </strong>
                 </div>
                 <!-- Done-->
                 <div class="kanban-block" id="done" class="done" ondrop="drop(event)" ondragover="allowDrop(event)">
-                    <strong><h2><div class="doneTitle">Done</div></h2></strong>
+                    <strong>
+                        <h2>
+                            <div class="doneTitle">Done</div>
+                        </h2>
+                    </strong>
                 </div>
                 <div class="create-new-task-block" id="create-new-task-block">
-                    <strong>New Task</strong>
+                    <strong>Add a new Story</strong>
                     <span class="form-row">
-                        <label class="form-row-label" for="task-name">Task</label>
-                        <input class="form-row-input" type="text" name="task-name" id="task-name">
+                        <div class="taskName-box">
+                            <input class="form-row-input" type="text" name="task-name" id="task-name" required placeholder="Story name">
+                        </div>
                     </span>
                     <span class="form-row">
                         <label class="form-row-label" for="task-name">Description</label>
