add story update
I changed the 'Add story' box.
It is now in the Backlog div.

--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -36,6 +36,13 @@
                             <div class="backlogTitle">Backlog</div>
                         </h2>
                     </strong>
+                    <!-- Create a new Story -->
+                    <div class="create-new-task-block" id="create-new-task-block">
+                        <input type="text" id="storyNameForm" placeholder="Enter the story name">
+                        <textarea id="descritptionForm" rows="3" placeholder="Description"></textarea>
+                        <button type="button" class="btn btn-danger" id="save-button" onclick="saveTask()">Save</button>
+                        <button type="button" class="btn btn-danger" id="cancel-button"onclick="createTask()">Cancel</button>
+                    </div>
                     <div class="task-button-block">
                         <button id="task-button" onclick="createTask()">&#x2b;</button>
                     </div>
@@ -74,23 +81,6 @@
                             <div class="doneTitle">Done</div>
                         </h2>
                     </strong>
-                </div>
-                <div class="create-new-task-block" id="create-new-task-block">
-                    <strong>Add a new Story</strong>
-                    <span class="form-row">
-                        <div class="taskName-box">
-                            <input class="form-row-input" type="text" name="task-name" id="task-name" required placeholder="Story name">
-                        </div>
-                    </span>
-                    <span class="form-row">
-                        <textarea class="form-row-input" name="task-description" id="task-description" cols="70"
-                            rows="10" placeholder="Description"></textarea>
-                    </span>
-                    <span class="form-row-buttons">
-                        <button id="edit-button" onclick="editTask()">Edit</span>
-                    <button type="button" class="btn btn-danger" id="save-button" onclick="saveTask()">Save</span>
-                        <button type="button" class="btn btn-danger" id="cancel-button" onclick="createTask()">Cancel</span>
-                            </span>
                 </div>
             </div>
     </main>
