--- a/project/src/main/resources/static/html/Log-in.html
+++ b/project/src/main/resources/static/html/Log-in.html
@@ -8,13 +8,13 @@
         <div class="hero">
             <div class="form-box">
 
-                <img id="logo" src="..\Pics\ubs_logo.png" alt="Girl in a jacket">
+                <img id="logo" src="..\Pics\ubs_logo.png" alt="UBS Logo">
 
                     <div class="button-box">
                         <div id="btn"></div> <!--Top Buttons Color and Transition-->
                         <!--Top Buttons to switch-->
-                        <button type="button" class="toggle-btn" onclick="login()">Log In</button>
-                        <button type="button" class="toggle-btn" onclick="register()">Register</button>
+                        <button type="button" id="loginbtn" class="toggle-btn" onclick="login()">Log In</button>
+                        <button type="button" id="registerbtn" class="toggle-btn" onclick="register()">Register</button>
                     </div>
                 
 
@@ -40,16 +40,32 @@
             var y = document.getElementById("register");
             var z = document.getElementById("btn");
 
+            var regbtn = document.getElementById("registerbtn")
+            var logbtn = document.getElementById("loginbtn")
+
             function register(){
                 x.style.left = "-400px";
                 y.style.left = "50px";
                 z.style.left = "110px";
+                for (let i = 0; i < 255; i++) {
+                    setTimeout(function() {
+                        regbtn.style.color = `rgb(${i}, ${i}, ${i})`
+                        logbtn.style.color = `rgb(${255-i}, ${255-i}, ${255-i})`
+                    }, i)
+                }
             }
             
             function login(){
                 x.style.left = "50px";
                 y.style.left = "450px";
                 z.style.left = "0";
+                for (let i = 0; i < 255; i++) {
+                    setTimeout(function() {
+                        logbtn.style.color = `rgb(${i}, ${i}, ${i})`
+                        regbtn.style.color = `rgb(${255-i}, ${255-i}, ${255-i})`
+
+                    }, i)
+                }
             }
 
         </script>
