--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -49,7 +49,8 @@
                         <button id="task-button" onclick="createTask()">&#x2b;</button>
                     </div>
                     <div class="task" id="task1" draggable="true" ondragstart="drag(event)">
-                        <span class="storyTitle">Home-/ Landingpage</span><br>
+                        <span class="storyTitle">Home-/ Landingpage</span>
+                        <div class="edit"></div>
                         <small>Create  and design the page where the user lands after logging in.</small>
                     </div>
                     <div class="task" id="task2" draggable="true" ondragstart="drag(event)">
