Updated create-task window & more
Updated create-task window.
Also added the edit button to every window and fixed the css.

--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -55,22 +55,32 @@
                     </div>
                     <div class="task" id="task2" draggable="true" ondragstart="drag(event)">
                         <span class="storyTitle">Induvidual Kanbanboard</span><br>
+                        <div class="edit"></div>
+
                         <small>Create and design the Kanbanboard with the storys.</small>
                     </div>
                     <div class="task" id="task3" draggable="true" ondragstart="drag(event)">
                         <span class="storyTitle">Backend Structure</span><br>
+                        <div class="edit"></div>
+
                         <small>Program the whole structure</small>
                     </div>
                     <div class="task" id="task4" draggable="true" ondragstart="drag(event)">
                         <span class="storyTitle">create Loginsite</span><br>
+                        <div class="edit"></div>
+
                         <small>Design the Loginpage in the ubs theme</small>
                     </div>
                     <div class="task" id="task5" draggable="true" ondragstart="drag(event)">
                         <span class="storyTitle">Login / Registration</span><br>
+                        <div class="edit"></div>
+
                         <small>Backend with database</small>
                     </div>
                     <div class="task" id="task6" draggable="true" ondragstart="drag(event)">
                         <span class="storyTitle">Task 6</span><br>
+                        <div class="edit"></div>
+
                         <small>Description</small>
                     </div>
                 </div>
