Small design changes and touch up

--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -39,7 +39,7 @@
 
                     <!-- Create a new Story -->
                     <div class="create-new-task-block" id="create-new-task-block">
-                        <input type="text" id="storyNameForm" placeholder="Enter the story name" value=""></input>
+                        <input type="text" id="storyNameForm" placeholder="Name" value=""></input>
                         <textarea id="descritptionForm" rows="3" placeholder="Description"></textarea>
                         <button type="submit" class="btn btn-danger" id="save-button" onclick="saveTask()">Save</button>
                         <button type="button" class="btn btn-danger" id="cancel-button"onclick="cancelCreateTask()">Cancel</button>
@@ -50,6 +50,7 @@
                     <div class="task-button-block">
                         <button id="task-button" onclick="createTask()">&#x2b;</button>
                     </div>
+                    <!-- Demo Story-->
                     <div class="task" id="DemoStory" draggable="true" ondragstart="drag(event)">
                         <span  class="storyTitle" id="DemoStory-name">DemoStory</span>
                         <div class="edit" onclick="editTask('DemoStory')"></div>
